--- a/PokerGameApp/PokerGameApp/Base.lproj/Main.storyboard
+++ b/PokerGameApp/PokerGameApp/Base.lproj/Main.storyboard
@@ -16,97 +16,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="obd-di-QIf">
-                                <rect key="frame" x="107" y="298" width="200" height="300"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvw-mj-Blr">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="50.5"/>
-                                        <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Count">
-                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="countButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J6s-BR-ScP"/>
-                                        </connections>
-                                    </button>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZTp-C4-6Zf">
-                                        <rect key="frame" x="0.0" y="62.5" width="200" height="51.5"/>
-                                        <segments>
-                                            <segment title="F&amp;Y"/>
-                                            <segment title="Knuth"/>
-                                            <segment title="Ordinary"/>
-                                        </segments>
-                                        <connections>
-                                            <action selector="algorithmControlValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="2To-55-cgc"/>
-                                        </connections>
-                                    </segmentedControl>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLg-hR-5Gx">
-                                        <rect key="frame" x="0.0" y="125" width="200" height="50"/>
-                                        <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Shuffle">
-                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="shuffleButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tr2-QX-o8G"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaU-y6-iLq">
-                                        <rect key="frame" x="0.0" y="187" width="200" height="50.5"/>
-                                        <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="RemoveOne">
-                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="removeOneButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gJj-y4-zLd"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5Z-p5-JKx">
-                                        <rect key="frame" x="0.0" y="249.5" width="200" height="50.5"/>
-                                        <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Reset">
-                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </buttonConfiguration>
-                                        <connections>
-                                            <action selector="resetButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R18-KX-H4W"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="3GO-46-QrA"/>
-                                    <constraint firstAttribute="width" constant="200" id="MuE-hG-5bR"/>
-                                </constraints>
-                            </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="scrollableAxes" indicatorStyle="white" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ehH-oW-vxJ">
-                                <rect key="frame" x="16" y="630" width="382" height="220"/>
+                                <rect key="frame" x="16" y="750" width="382" height="100"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="sLH-Gt-IeU"/>
+                                </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qnn-UW-TOn" userLabel="GameTypeSegControl">
+                                <rect key="frame" x="139.5" y="44" width="135" height="32"/>
+                                <segments>
+                                    <segment title="7 Cards"/>
+                                    <segment title="5 Cards"/>
+                                </segments>
+                            </segmentedControl>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="XkQ-Sr-U9o" userLabel="NumberPersonSegControl">
+                                <rect key="frame" x="139.5" y="91" width="135" height="32"/>
+                                <segments>
+                                    <segment title="2명"/>
+                                    <segment title="3명"/>
+                                    <segment title="4명"/>
+                                </segments>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dY4-Kv-WBo" userLabel="ScreenView">
+                                <rect key="frame" x="0.0" y="138" width="414" height="596"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ehH-oW-vxJ" secondAttribute="trailing" constant="16" id="3dw-8B-bH2"/>
+                            <constraint firstItem="XkQ-Sr-U9o" firstAttribute="top" secondItem="qnn-UW-TOn" secondAttribute="bottom" constant="16" id="9H7-pr-1R2"/>
+                            <constraint firstItem="qnn-UW-TOn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9u6-Nk-kEh"/>
+                            <constraint firstItem="XkQ-Sr-U9o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ABm-6W-7Ca"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ehH-oW-vxJ" secondAttribute="bottom" constant="12" id="AbR-5D-zsz"/>
-                            <constraint firstItem="ehH-oW-vxJ" firstAttribute="top" secondItem="obd-di-QIf" secondAttribute="bottom" constant="32" id="BeR-If-TNT"/>
-                            <constraint firstItem="obd-di-QIf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="L0I-tZ-Rgc"/>
-                            <constraint firstItem="obd-di-QIf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ab1-Un-IfZ"/>
+                            <constraint firstItem="ehH-oW-vxJ" firstAttribute="top" secondItem="dY4-Kv-WBo" secondAttribute="bottom" constant="16" id="CrF-nq-b02"/>
+                            <constraint firstItem="dY4-Kv-WBo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IPH-9S-LqI"/>
+                            <constraint firstItem="dY4-Kv-WBo" firstAttribute="top" secondItem="XkQ-Sr-U9o" secondAttribute="bottom" constant="16" id="KNG-n3-EOX"/>
+                            <constraint firstItem="qnn-UW-TOn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="T2N-fu-whn"/>
                             <constraint firstItem="ehH-oW-vxJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="hLd-ju-AYE"/>
+                            <constraint firstItem="XkQ-Sr-U9o" firstAttribute="width" secondItem="qnn-UW-TOn" secondAttribute="width" id="khr-Ws-zIn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dY4-Kv-WBo" secondAttribute="trailing" id="sGg-zv-XKm"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="algorithmControl" destination="ZTp-C4-6Zf" id="1J5-tU-xEJ"/>
                         <outlet property="logTextView" destination="ehH-oW-vxJ" id="Tqf-ye-rnH"/>
+                        <outlet property="screenView" destination="dY4-Kv-WBo" id="LkW-fe-iL8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="-171" y="113"/>
         </scene>
     </scenes>
     <resources>
